# apolo-prover

./: .gitattributes  .gitignore  README.md  azure-pipelines-backend.yml  azure-static-web-apps-calm-river-0858d1d0f.yml  azure-static-web-apps-zealous-pebble-02f7df60f.yml  config.example.json  docker-compose.dev.yml  docker-compose.yml  render.yaml
apps/api/: Dockerfile  boot.sh  pyproject.toml  requirements.txt  startup.sh
apps/api/app/: main.py
apps/api/app/api/: _deps.py  auth_routes.py  chat_routes.py  health_routes.py  sessoes_routes.py  voice_routes.py
apps/api/app/core/: config.py  database.py  engine.py  logging_config.py  permissoes.py  rate_limiter.py  sql_guard.py
apps/api/app/domains/: __init__.py  _base.py  cr_delivery.py  cr_fluxo_caixa.py  cr_folha_pessoas.py  crm_contatos.py  crm_coordenador.py  crm_operacao.py  crm_pipeline.py
apps/api/app/installer/: setup.py  setup_usuarios.py
apps/api/app/pipeline/: context.py  deps.py  errors.py  events.py  orchestrator.py  sql_builder.py
apps/api/app/ports/: llm.py  sql_exec.py  turn_store.py
apps/api/app/prompts/: intent_classification.txt  response_generator.txt  response_voice.txt  sql_generator.txt  voice_system.txt
apps/api/tests/: _record.py  conftest.py  fakes.py  test_auth_service.py  test_catalog_consistency.py  test_characterization.py  test_database.py  test_domains_base.py  test_eval_semantico.py  test_logging_filter.py  test_permissoes.py  test_pipeline_context.py  test_pipeline_errors.py  test_pipeline_events.py  test_ports.py  test_rate_limiter.py  test_sql_guard.py
(+105 files in other folders)
