[project]
name = "apolo-prover-api"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: testes de correcao semantica contra a base real (on-demand; nao roda no CI). Requer APOLO_EVAL_BASE_URL + stack no ar.",
]

[tool.ruff]
line-length = 120
target-version = "py312"
